--- a/src/pages/main/styles.css
+++ b/src/pages/main/styles.css
@@ -10,7 +10,7 @@
 }
 
 .item-list {
-  max-width: 800px;
+  max-width: 650px;
   margin: 20px auto 0;
   padding: 0 20px;
   font-family: 'Avenir LT Std', sans-serif;
@@ -21,12 +21,14 @@
   border: 1px solid #ddd;
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  margin-bottom: 20px;
+  padding: 14px;
+  margin-bottom: 18px;
+  display: flex;
 }
 
 .item-list .item-card p {
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: 300;
   color: #999;
   margin-top: 5px;
   line-height: 24px;
@@ -80,12 +82,51 @@
 .item-list .actions button[disabled]:hover {
   opacity: 0.3;
 }
-.row {
-  display: flex;
-}
-.column1 {
+.poster {
   flex: 20%;
 }
-.column2 {
+.infos {
   flex: 80%;
+}
+
+.flip-box {
+  background-color: transparent;
+  width: 100%;
+  height: 200px;
+  perspective: 1000px;
+}
+
+.flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+ /* .flip-box-inner:hover {
+  transform: rotateY(180deg);
+} */
+.flipping {
+  transform: rotateY(180deg);
+}
+
+.flip-box-front, .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+/* .flip-box-front {
+  background-color: #bbb;
+  color: black;
+} */
+
+.flip-box-back {
+  /* background-color: dodgerblue; */
+  /* color: white; */
+  transform: rotateY(180deg);
 }
