--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Avenir LT Std', sans-serif;
   background: #fafafa;
   color: #333;
 }
